src/test/examples/custom/valid/class/canAccessPublicClassAttribute.wacc
# Public class attributes can be accessed

begin
  class H is 
    public int v
    private int J(int k) is 
      return 0
    end
  end
  H p = new H(2);
  println p.v;
  p.v = 3;
  println p.v
end